# solana-lora-bench

./: .gitignore  README.md  pyproject.toml
data/processed/: stats.json  valid.jsonl
data/swap/: swap_examples.jsonl
results/: BENCHMARK_REPORT.md  benchmark_2026-03-22.csv
scripts/: generate_synthetic.py  parse_trajectories.py  prepare_hf_dataset.py  train_sft_bf16.py  validate_dataset.py
validator/: package.json  run.ts
